--- a/i3/config
+++ b/i3/config
@@ -211,6 +211,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Enable float for the calendar
+for_window [class="Yad" title="yad-calendar"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
