--- a/nitrogen/bg-saved.cfg
+++ b/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/eric/.config/wallpapers/car_wallpaper.jpg
+file=/home/eric/.config/wallpapers/nord_car.png
 mode=4
 bgcolor=#000000
