--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -107,7 +107,7 @@ inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.95;
+frame-opacity = 0.5;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -143,7 +143,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+# corner-radius = 10;
+round-border = 1;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -405,9 +406,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.8; shadow = false; }
+  dropdown_menu = { shadow = false; opacity = 0.8; }
 };
