--- a/polybar/config
+++ b/polybar/config
@@ -48,10 +48,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = "Fira Code;2"
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date popup-calendar
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -69,6 +69,14 @@ enable-ipc = true
 [module/xworkspaces]
 type = internal/xworkspaces
 
+icon-0 = ♚
+icon-1 = ♛
+icon-2 = ♜
+icon-3 = ♝
+icon-4 = ♞
+icon-default = ♟
+
+enable-scroll=true
 label-active = %name%
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
