--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -190,6 +190,8 @@ rounded-corners-exclude = [
 #
 # blur-kern = ""
 blur-kern = "3x3box";
+blur-method = "dual_kawase";
+blur-strength = 2;
 
 
 # Exclude conditions for background blur.
@@ -211,7 +213,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "xrender";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
