--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -170,7 +170,7 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+# blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -189,9 +189,9 @@ rounded-corners-exclude = [
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
-blur-method = "dual_kawase";
-blur-strength = 2;
+# blur-kern = "3x3box";
+# blur-method = "dual_kawase";
+# blur-strength = 4;
 
 
 # Exclude conditions for background blur.
